fix add page display issue, when the instruction go two digit, it will go out of bound

--- a/source/assets/styles/recipe-add.css
+++ b/source/assets/styles/recipe-add.css
@@ -303,7 +303,7 @@ input {
 }
 
 .input-list {
-	margin-left: 25px;
+	margin-left: 35px;
 }
 
 .delete {
